# ghost-ai-compiler

./: .gitignore  README.md  pyproject.toml
ghost_ai_compiler/: main.py  util.py
ghost_ai_compiler/prompt/: generate_module_spec_human.txt  generate_module_spec_system.txt  generate_specification_human.txt  impl_module_spec_human.txt  impl_module_spec_system.txt
