[tool.poetry]
name = "ghost-ai-compiler"
version = "0.1.0"
description = ""
authors = ["hal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = ">=4.39.1"
accelerate = "^0.29.2"
openai = "^1.23.2"
pandas = "^2.2.2"
storage = "^0.0.4.3"
streamlit = "^1.33.0"
markdownify = "^0.13.1"
langchain = "^0.2.16"
langgraph = "^0.2.16"
langchain-cohere = "^0.2.4"
langchain-openai = "^0.1.23"
langchain-anthropic = "^0.1.23"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
